hphp/test/zend/good/ext-gd/imagefontheight_basic.php
<?php
var_dump(imagefontheight(1),imagefontheight(2),imagefontheight(3),imagefontheight(4),imagefontheight(5));
?>