hphp/test/zend/bad/ext-bcmath/bcpowmod_error3.php
<?php
echo bcpowmod('1', '2', '3', '4', '5');
?>